2003-11-11  Adam D. Moss  <adam@gimp.org>

	* src/al_debug.c: Fix an implicit declaration: the man
	page on linux says that vsnprintf() is a GNU extension, so #define
	_GNU_SOURCE

2003-11-11  Adam D. Moss  <adam@gimp.org>

	* src/arch/sdl/sdl.c: #include <string.h> to avoid implicit
	declaration of memcpy()/memset()

2003-11-11  Adam D. Moss  <adam@gimp.org>

	* audioconvert/ac_freq.c
	For the first sample in a chunk to be resampled*2, use dampened
        extrapolation instead of interpolation to somewhat reduce 'clicking'.

2003-11-03  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* Michel Danzer's big endian patch

2003-10-23  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* audioconvert/ac_freq.c
	Added Adam Moss's patch to improve fidelity of low-sampled sounds
	in higher sampling-rate environments.

2003-06-20  Erik Greenwald <erik@smluc.org>

	* (many)
	Removed trailing spaces and tabs.

2003-05-15  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/arch/alsa/alsa.c:
	Moves alsa/asoundlib.h inclusion below sys/time.h

2003-05-07  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* src/al_filter.c:
	Changed doppler to multiply existing pitch, if present.

2003-04-01  J. Valenzuela  <jvalenzu@infinite-monkeys.org>

	* misc
	Joe Tennies's vector patches

2003-03-23  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_source.c:
	Sunil's updated patch

2003-03-21  Joseph Valenzuela  <jvalenzu@formosa.infinite-monkeys.org>

	* src/al_source.c
	queueing pizzatch

2003-01-13  Joseph Valenzuela  <jvalenzu@infinite-monkeys.org>

	* al/aluttypes.h
	* linux/include/al/alexttypes.h
	Added AL_PROVIDES_ALUT and LAL_OPENAL defines.

	* openal.spec
	added file

	* Changelog
	Removed "formosa." from my email

	* src/arch/morphos/morphos_dispatcher.c
	* src/arch/morphos/morphos_dispatcher.h
	* src/arch/morphos/morphos_native.c
	* src/arch/morphos/morphos_native.h
	* src/mutex/morphosmutex.c
	* src/mutex/morphosmutex.h